# frisian-mcp

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  RELEASING.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pr-validation.yml  release.yml
docs/: roadmap.md
docs/ADR/: adr-001-pluggable-backends.md  adr-002-dispatcher-pattern.md  adr-003-url-auto-registration.md  adr-004-write-path-response-filtering.md  adr-005-read-response-filtering.md  adr-006-repeated-path-token-reduction.md  adr-007-nested-wrapper-rejection.md  adr-008-permission-aware-discovery.md  adr-009-pkce-authorize-path-request-inputs-not-authority.md
docs/Changelog/: changelog.md
docs/Getting Started/: getting-started.md
docs/Guide/: connect-agent.md  contributing.md  dispatcher-pattern.md  mcp-doctor.md  permission-aware-discovery-security.md  permission-aware-discovery.md  read-response-filtering.md  the-token-problem.md  what-is-mcp.md  write-path-response-filtering.md
docs/Q and A/: q-and-a.md
docs/Reference/: compliance.md  installation-configuration-reference.md
docs/Security/: demo-surface-tagging.md  security.md
docs/about/: CODE_OF_CONDUCT.md  about.md
docs/connect-agent/: live-demo.md
docs/installs/Django/friese-mcp/greenfield/: install.md
docs/installs/Django/friese-mcp/greenfield/features/: configuration.md  dispatcher.md  mcp-heavy.md  (+2 more)
docs/installs/Django/nautobot/3.x/: install.md  nginx.md
docs/installs/Django/netbox/4.x/: install.md
docs/installs/Django/openedx/sumac/: install.md
docs/installs/Django/paperless/2.x/: install.md  paperless_frisian_mcp.py
docs/troubleshooting/: issues.md
docs/troubleshooting/Django/nautobot/3.x/: troubleshooting.md
docs/troubleshooting/Django/netbox/4.x/: troubleshooting.md
docs/troubleshooting/Django/openedx/sumac/: troubleshooting.md
docs/troubleshooting/Django/paperless/2.x/: troubleshooting.md
friese_mcp_protected/: apps.py
src/friese_mcp/: __init__.py  apps.py  checks.py  decorators.py  middleware.py  protocol.py  registry.py  resources.py  test_settings.py  urls.py  views.py
src/friese_mcp/backends/: __init__.py  base.py  discovery.py  dispatcher.py  group_dispatcher.py  invocation.py
src/friese_mcp/contrib/: __init__.py  middleware.py
src/friese_mcp/contrib/agents/: __init__.py  admin.py  apps.py  models.py
src/friese_mcp/contrib/agents/migrations/: 0001_initial.py  0002_agentconnection_xor_credential_constraint.py  0003_alter_agentconnection_allowed_tools.py
src/friese_mcp/contrib/coordination/: admin.py  apps.py  middleware.py  models.py  utils.py
src/friese_mcp/contrib/coordination/migrations/: 0001_initial.py
src/friese_mcp/contrib/coordination/tools/: approvals.py  artifacts.py  escalate.py  projects.py  rooms.py  scratchpad.py  system.py  tasks.py  workers.py
src/friese_mcp/contrib/oauth/: __init__.py  admin.py  apps.py  authentication.py  models.py  urls.py  views.py  wellknown_urls.py
src/friese_mcp/contrib/oauth/migrations/: 0001_initial.py  0002_oauthaccesstoken_token_expires_at_idx.py  0003_oauthaccesstoken_last_used_at.py  0004_permission_tier.py  0005_alter_oauthclient_client_secret.py  0006_hash_oauth_access_tokens.py  0007_oauthclient_redirect_uris.py  0008_alter_oauthclient_client_id.py  0009_oauthclient_grant_types.py  0010_alter_oauthclient_grant_types.py
src/friese_mcp/contrib/tokens/: __init__.py  admin.py  apps.py  authentication.py  models.py  permissions.py
src/friese_mcp/contrib/tokens/migrations/: 0001_initial.py  0002_friesemcptoken_token_is_active_idx.py  0003_friesemcptoken_permission.py  0004_alter_friesemcptoken_token.py
src/friese_mcp/management/commands/: mcp_config.py  mcp_doctor.py
src/frisian_mcp/: __init__.py  apps.py  checks.py  decorators.py  middleware.py  protocol.py  registry.py  resources.py  test_settings.py  urls.py  views.py
src/frisian_mcp/backends/: __init__.py  base.py  discovery.py  dispatcher.py  group_dispatcher.py  invocation.py
src/frisian_mcp/contrib/: __init__.py  middleware.py
src/frisian_mcp/contrib/agents/: __init__.py  admin.py  apps.py  models.py
src/frisian_mcp/contrib/agents/migrations/: 0001_initial.py
src/frisian_mcp/contrib/oauth/: __init__.py  _consent_gate.py  _pkce_default_permission.py  _redirect_uri_allowlist.py  admin.py  apps.py  authentication.py  models.py  urls.py  views.py  wellknown_urls.py
src/frisian_mcp/contrib/oauth/migrations/: 0001_initial.py  0002_oauthclient_user.py  0003_oauthauthorizeconsent.py
src/frisian_mcp/contrib/permissions/: __init__.py  base.py  exempt_view_adapter.py  nautobot_adapter.py
src/frisian_mcp/contrib/tokens/: __init__.py  admin.py  apps.py  authentication.py  models.py  permissions.py
src/frisian_mcp/contrib/tokens/migrations/: 0001_initial.py
src/frisian_mcp/management/commands/: mcp_config.py  mcp_doctor.py  mcp_hash_api_key.py
tests/: __init__.py  conftest.py  test_api_ui_collision.py  test_apps_startup_summary.py  test_async_tool_handlers.py  test_checks.py  test_contrib_agents.py  test_contrib_middleware.py  test_contrib_oauth.py  test_contrib_tokens.py  test_contrib_tokens_permissions.py  test_coordination_admin.py  test_coordination_approvals.py  test_coordination_artifacts.py  test_coordination_escalate.py  test_coordination_models.py  test_coordination_projects.py  test_coordination_rooms.py  test_coordination_scratchpad.py  test_coordination_system.py  test_coordination_tasks.py  test_coordination_workers.py  test_crud_payload_hardening.py  test_decorators.py  test_deferred_discovery.py  test_discovery.py  test_discovery_backends.py  test_dispatcher.py  test_fk_m2m_schemas.py  test_group_dispatcher.py  test_invocation_host_permissions.py  test_invocation_write_actions.py  test_lite_mode.py  test_mcp_config.py  test_mcp_doctor.py  test_mcp_heavy.py  test_mcp_url_install.py  test_middleware.py  test_permission_aware_discovery.py  test_permission_tiers.py  (+19 more)
(+27 files in other folders)
