[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "frisian-mcp"
version = "1.0.12"
description = "The Django MCP gateway that discovers your API automatically — zero boilerplate, auto-discovery, dispatcher pattern, OAuth 2.0"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "frisian-mcp maintainers", email = "developer@frisian-mcp.com" },
]
maintainers = [
    { name = "Jeremy Friese", email = "developer@frisian-mcp.com" },
]
keywords = ["mcp", "django", "model-context-protocol", "agentic-ai", "drf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pylint",
    "pylint-django",
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-django",
    "django-stubs",
    "djangorestframework-stubs",
]

[project.urls]
Homepage = "https://frisian-mcp.com/"
Repository = "https://github.com/Frisian-MCP/frisian-mcp"
"Bug Tracker" = "https://github.com/Frisian-MCP/frisian-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["frisian_mcp*"]

[tool.setuptools.package-data]
"frisian_mcp" = ["**/*.html", "**/*.txt", "**/*.css", "**/*.js"]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
# docs/ holds operator-reference configs that are illustrative examples
# (Nautobot nautobot_config.py, NetBox configuration.py + plugin_wrapper,
# Open edX mcp_prod.py, etc.).  They are documentation, not package source
# under the strict formatting bar, so exclude them from the format check.
extend-exclude = '''
^/docs/
'''

# ---------------------------------------------------------------------------
# isort
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["frisian_mcp"]
# Matches the black exclude above — docs/ is documentation, not source.
skip_glob = ["docs/**"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
    "D",   # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module — covered by __init__.py docstring
    "D104", # Missing docstring in public package
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D212", # multi-line-summary-first-line (conflicts with D213)
    "ANN401", # Dynamically typed Any — unavoidable for JSON dispatch
]

[tool.ruff.lint.isort]
known-first-party = ["frisian_mcp"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/frisian_mcp/__init__.py" = ["D"]
"src/**/migrations/**" = [
    "D",       # docstrings not required in auto-generated migration files
    "E501",    # long lines in auto-generated help_text strings are acceptable
]
"tests/**" = [
    "S101",    # assert statements are idiomatic in tests
    "S105",    # hardcoded "password" strings in assert comparisons are test data, not secrets
    "S106",    # hardcoded test passwords are intentional
    "ANN201",  # missing return type on public function (test functions)
    "D103",    # missing docstring in public function (parametrize helpers)
    "D401",    # first line of docstring should be in imperative mood (too prescriptive for helpers)
    "PLC0415", # import-outside-toplevel (fixture-scoped imports are intentional)
]
"tests/urls.py" = [
    "E402",    # module-level import not at top of file (URL routing imports)
    "D401",    # imperative mood — test fixture ViewSet docstrings
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rest_framework.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# pytest fixtures use untyped decorators; relax strict decorator checking for tests.
disallow_untyped_decorators = false

[tool.django-stubs]
django_settings_module = "frisian_mcp.test_settings"

# ---------------------------------------------------------------------------
# pylint
# ---------------------------------------------------------------------------
[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "frisian_mcp.test_settings"
ignore-paths = ["src/.*/migrations/"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-returns = 15
max-branches = 15
max-module-lines = 1200

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "duplicate-code",  # contrib.tokens and contrib.oauth share similar Bearer header parsing — intentional
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "frisian_mcp.test_settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
testpaths = ["tests"]
